# synqit

./: .env.example  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __init__.py  ai.py  index.html  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
synqit/: __init__.py  ai.py  analyzer.py  cli.py  config.py  git_utils.py  prompts.py
synqit/providers/: __init__.py  anthropic.py  base.py  huggingface.py  huggingface_provider.py  openai.py
tests/: test_analyzer.py  test_git_utils.py  test_prompts.py
