[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "synqit"
version = "0.1.0"
description = "AI-powered Git assistant. Sync your code with intent."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Pranav KP" }]
keywords = ["git", "ai", "commit", "cli", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12.0",
    "gitpython>=3.1.40",
    "anthropic>=0.25.0",
    "rich>=13.7.0",
]

[project.scripts]
synqit = "synqit.cli:app"

[project.urls]
Homepage = "https://synqit.dev"
Repository = "https://github.com/pranavkp/synqit"

[tool.setuptools.packages.find]
where = ["."]
include = ["synqit*"]
